 * Errors in document validation now link to the right page

2006-09-20 cjg
 * Broke up validate.pl into separate files
 * Cleaned up validate of eprints
 * Fixed it so that document & file validation errors now have a link
    to the page with the upload component on.
 * Moved delete-document button to be in the tab label
 * Removed the document-change button
 * s/upload some files/upload a file/

2006-09-20 cjg
 * renamed core.pl to Core.pl so it loads first
 * Added brand.pl to contain quick and easy branding stuff like sitelogo
    and theme.
 * Added a new entity &logo; which is an image of the url spec'd in site_logo
 * Added style/auto and javascript/auto which cause all files in these dirs 
    to be included by the template. Handy for plugins.
 * Sorted some issues with print.css
 * Moved appropriate .js and .css into the auto dirs.

2006-09-20 cjg
 * Upload component now takes which doc fields to ask for as a workflow 
    config.
 * Moved style related images to /style/images rather than /images/style
 * Moved all style related images into that dir.
 * Added option to xml_to_metafield to take an alternate dataset
 * Added a minimal green theme to prove themes are working.

2006-09-20 cjg
 * Phrases now work from a directory of phrase files, not a single file.
 * Broke up phrases.xml for archive phrases.

2006-09-20 cjg
 * Details now has 2 versions staff/owner
 * Each version links into the edit pages if allowed
 * Fixed bug in the problems warnings which jumped always into owner
    edit rather than the appropriate type of edit.
 * Convert was dieing if it could not work out the mime type of a file. Now
    it just returns undef.

2006-09-21 cjg
 * Compound fields now have the sub-field expressed withing them. 
 * Compound fields input/render has now been cleaned up.
 * Fixed a bug in the hyperlinking problems to the right edit scren code
 * Added file_perms and dir_perms to SystemSettings.tmpl